@@ -1,6 +1,12 @@
 ##Text encoding: utf-8
 
-2016-01-06  Jean Brefort  <jean.brefort@normalesup.org>
+2016-01-15  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/arrow.cc: fix position setting through GetProperty().
+	* libs/gcp/fragment.cc: ditto.
+	* libs/gcu/document.cc: fixed an uninitialized member condition.
+	* plugins/loaders/cdxml/cdxml.cc: protect against NULL attributes.
+
+2016-01-06  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/molecule.cc: fixed two crashers.
 
 2015-12-20  Jean Bréfort  <jean.brefort@normalesup.org>
